--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+*{
+  font-size: 50px;
+  text-align: center;
+}
+
 body {
     background-color: lightblue;
   }
   
-  h1 {
+  h2 {
     color: navy;
     margin-left: 20px;
     margin-top: 30px;
